修复图片上传后顺序错误的问题

--- a/dialogs/image/image.html
+++ b/dialogs/image/image.html
@@ -111,7 +111,6 @@
 
         </div>
     </div>
-    <script type="text/javascript" src="image.js"></script>
-
+    <script type="text/javascript" src="image.js?d=20161206"></script>
 </body>
 </html>
